--- a/Navigation/app/src/main/res/layout/activity_favorite.xml
+++ b/Navigation/app/src/main/res/layout/activity_favorite.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context="com.example.woga1.navigation.FavoriteActivity">
+    tools:context="com.example.woga1.navigation.Activity.FavoriteActivity">
 
 
     <LinearLayout
@@ -16,110 +17,207 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="10dp"
+            android:layout_height="20dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@drawable/ic_home_black_24dp" />
+            android:background="@drawable/home" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="5"
-            android:text="집"
-            android:textSize="20dp" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="13"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/homeName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="15"
-            android:textSize="20dp" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="2.8"
+                android:gravity="bottom|left"
+                android:text="집"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:textSize="18dp" />
 
-        <ImageButton
-            android:id="@+id/homeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+
+            <TextView
+                android:id="@+id/homeName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="5"
+                android:text=""
+                android:textSize="15dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/ic_check_black_24dp" />
+            android:gravity="left">
+
+            <Button
+                android:id="@+id/homeButton"
+                android:layout_width="40dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:background="@drawable/enrollbuttonline"
+                android:gravity="center"
+                android:text="등록"
+                android:textColor="#8C8C8C"
+                android:textSize="12dp" />
+        </LinearLayout>
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#ACACAC"/>
     <LinearLayout
         android:id="@+id/company"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="horizontal">
 
+
+
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="10dp"
+            android:layout_height="20dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@drawable/ic_work_black_24dp" />
+            android:background="@drawable/company" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="5"
-            android:text="회사"
-            android:textSize="20dp" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="13">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="2.8"
+                android:layout_marginLeft="10dp"
+                android:gravity="bottom|left"
+                android:text="회사"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:textSize="18dp"/>
 
-        <TextView
-            android:id="@+id/companyName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="15"
-            android:textSize="20dp" />
 
-        <ImageButton
-            android:id="@+id/companyButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/companyName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="5"
+                android:text=""
+                android:textSize="15dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/ic_check_black_24dp" />
+            android:gravity="left">
+
+            <Button
+                android:id="@+id/companyButton"
+                android:layout_width="40dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:background="@drawable/enrollbuttonline"
+                android:gravity="center"
+                android:text="등록"
+                android:textColor="#8C8C8C"
+                android:textSize="12dp" />
+        </LinearLayout>
+
+
     </LinearLayout>
-
-    <!--<ListView-->d:layout_height="wrap_content" />-->
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#ACACAC"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="horizontal">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/ic_star_border_black_24dp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="장소 추가"
-            android:layout_gravity="center"
-            android:layout_weight="16"
-            android:textSize="20dp"/>
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/ic_check_black_24dp"/>
-    </LinearLayout>
 
-    <Button
-        android:id="@+id/delete"
+        <ImageView
+            android:layout_width="10dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/favoritestar" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="13"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="2.8"
+                android:gravity="bottom|left"
+                android:text="장소 추가"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:textSize="18dp" />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="5"
+                android:text=""
+                android:textSize="15dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:layout_gravity="center"
+            android:gravity="left">
+            <Button
+                android:layout_width="40dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:background="@drawable/enrollbuttonline"
+                android:text="등록"
+                android:textColor="#8C8C8C"
+                android:gravity="center"
+                android:textSize="12dp"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="edit삭제" />
+        android:layout_height="1dp"
+        android:background="#ACACAC"/>
+    <!--<Button-->
+        <!--android:id="@+id/delete"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="#FFFFFF"-->
+        <!--android:text="" />-->
 
 </LinearLayout>
