--- a/Navigation/app/src/main/res/layout/activity_gps_check.xml
+++ b/Navigation/app/src/main/res/layout/activity_gps_check.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
+    android:layout_width="260dp"
     android:layout_height="wrap_content"
     android:background="#eeeeee"
     android:orientation="vertical"
@@ -12,16 +12,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="53dp"
+            android:layout_height="50dp"
             android:background="#eeeeee"
             android:gravity="center"
             android:text="알림"
             android:textColor="#000000"
             android:textSize="20sp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#000000"/>
     </LinearLayout>
     <!-- //end 타이틀바 -->
 
