--- a/Navigation/app/src/main/res/layout/activity_menu.xml
+++ b/Navigation/app/src/main/res/layout/activity_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.woga1.navigation.MenuActivity"
+    tools:context="com.example.woga1.navigation.Activity.MenuActivity"
     android:weightSum="1">
 
     <LinearLayout
