--- a/Navigation/app/src/main/res/layout/activity_near.xml
+++ b/Navigation/app/src/main/res/layout/activity_near.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.woga1.navigation.NearActivity">
+    tools:context="com.example.woga1.navigation.Activity.NearActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
