--- a/Navigation/app/src/main/res/layout/activity_ready.xml
+++ b/Navigation/app/src/main/res/layout/activity_ready.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.woga1.navigation.ReadyActivity">
+    tools:context="com.example.woga1.navigation.Activity.ReadyActivity">
 
 
     <LinearLayout
@@ -94,11 +94,17 @@
     <TextView
         android:id="@+id/distance"
         android:layout_width="0dp"
+        android:textSize="15dp"
+        android:gravity="center"
+        android:textColor="#000000"
         android:layout_height="match_parent"
         android:layout_weight="0.4"/>
     <TextView
         android:id="@+id/time"
         android:layout_width="0dp"
+        android:textSize="15dp"
+        android:gravity="center"
+        android:textColor="#000000"
         android:layout_height="match_parent"
         android:layout_weight="0.4"/>
 </LinearLayout>
