--- a/Navigation/app/src/main/res/drawable/secondinform.xml
+++ b/Navigation/app/src/main/res/drawable/secondinform.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
 
     <!-- 테두리 내부 색상 설정 -->
-    <solid android:color="#ACACAC" />
+    <solid android:color="#014666" />
 
     <!-- 테두리 내부 여백 설정 -->
     <corners
