--- a/Navigation/app/src/main/res/layout/activity_bluetooth.xml
+++ b/Navigation/app/src/main/res/layout/activity_bluetooth.xml
@@ -1,54 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:paddingBottom="10dp"
     android:paddingTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="horizontal"
+  <RelativeLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center"
+      android:id="@+id/relativeLayout"
+      android:layout_alignParentTop="true"
+      android:layout_alignParentStart="true"
+      android:layout_marginTop="212dp">
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:textSize="20dp"
+          android:textColor="#000000"
+          android:text="연결상태 : "
+          android:layout_gravity="bottom"
+          android:id="@+id/textView9"
+          android:layout_alignParentTop="true"
+          android:layout_alignParentStart="true"
+          android:layout_marginStart="125dp" />
+
+      <TextView
+          android:id="@+id/textView8"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="bottom"
+          android:layout_toEndOf="@id/textView9"
+          android:gravity="center"
+          android:text="비 연결"
+          android:textColor="#000000"
+          android:textSize="20dp" />
+  </RelativeLayout>
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_below="@+id/relativeLayout"
+        android:layout_alignParentStart="true"
+        android:id="@+id/relativeLayout2">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="connection state : "/>
+            android:gravity="center"
+            android:textSize="20dp"
+            android:textColor="#000000"
+            android:text="                  "/>
+    </RelativeLayout>
 
-        <TextView
-            android:id="@+id/connection_status_textview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=""/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:weightSum="1"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/input_string_edittext"
-            android:hint="input text here"
-            android:layout_weight="0.8"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-
-        <Button
-            android:id="@+id/send_button"
-            android:layout_weight="0.2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Send" />
-    </LinearLayout>
-
-    <ListView
+    <TextView
+        android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/message_listview"/>
+        android:layout_alignBottom="@+id/relativeLayout2"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="100dp"
+        android:gravity="center"
+        android:text="디바이스 명 : "
+        android:textColor="#000000"
+        android:textSize="20dp"
+        android:layout_below="@+id/relativeLayout" />
 
-</LinearLayout>
+</RelativeLayout>
