--- a/Navigation/app/src/main/res/layout/activity_ready.xml
+++ b/Navigation/app/src/main/res/layout/activity_ready.xml
@@ -25,9 +25,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.75"
+                android:layout_weight="0.8"
                 android:gravity="center"
                 android:text="출발지"
+                android:textStyle="bold"
                 android:textColor="#000000"
                 android:textSize="18dp" />
 
@@ -37,7 +38,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:textColor="#000000"
-                android:layout_weight="0.25"
+                android:layout_weight="0.2"
                 android:textSize="15dp"/>
         </LinearLayout>
 
@@ -49,9 +50,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.75"
+                android:layout_weight="0.8"
                 android:gravity="center"
                 android:text="도착지"
+                android:textStyle="bold"
                 android:textColor="#000000"
                 android:textSize="18dp" />
 
@@ -62,7 +64,7 @@
                 android:gravity="center_vertical"
                 android:textColor="#000000"
                 android:textSize="15dp"
-                android:layout_weight="0.25" />
+                android:layout_weight="0.2" />
         </LinearLayout>
     </LinearLayout>
 
@@ -76,38 +78,64 @@
 
     </RelativeLayout>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:orientation="horizontal"
-    android:background="#F4F4F4"
-    android:layout_weight="1.2">
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.2"
-        android:text="추천길안내"
-        android:textSize="13dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="#FF8880"/>
-    <TextView
-        android:id="@+id/distance"
-        android:layout_width="0dp"
-        android:textSize="15dp"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:layout_height="match_parent"
-        android:layout_weight="0.4"/>
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="0dp"
-        android:textSize="15dp"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:layout_height="match_parent"
-        android:layout_weight="0.4"/>
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.2"
+        android:background="#F4F4F4"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.7"
+            android:gravity="center"
+            android:text="추천길안내"
+            android:textColor="#FF8880"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/kmTitle"
+            android:layout_width="15dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="거리"
+            android:textColor="#000000"
+            android:textSize="10dp"
+            android:textStyle="bold"
+            android:layout_weight="0.2"/>
+        <TextView
+            android:id="@+id/distance"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="0.5km"
+            android:textColor="#000000"
+            android:textSize="18dp" />
+        <TextView
+            android:id="@+id/minTItle"
+            android:layout_width="15dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="false"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="시간"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:textSize="10dp"
+            android:layout_weight="0.2"/>
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="4분"
+            android:textColor="#000000"
+            android:textSize="18dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/arrivingLayout"
@@ -124,6 +152,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1.00"
             android:background="#A6A6A6"
+            android:textSize="17dp"
             android:text="다른경로" />
 
         <Button
@@ -132,6 +161,8 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:background="#E84E40"
+            android:textSize="20dp"
+            android:textStyle="bold"
             android:text="안내시작" />
 
 
