--- a/Navigation/app/src/main/res/layout/activity_splash.xml
+++ b/Navigation/app/src/main/res/layout/activity_splash.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical"
      >
 
     <!--<TextView-->
@@ -11,23 +10,26 @@
         <!--android:text="로딩"-->
         <!--android:layout_gravity="center_horizontal"-->
         <!--android:textSize="30dp" />-->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_gravity="center"></LinearLayout>
+
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
         android:background="@drawable/handlearicon"
-        android:layout_gravity="center"/>
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/imageView3"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@drawable/handlearicon"/>
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="70dp"
-        android:layout_gravity="center"
-        android:background="@drawable/handleartext" />
+        android:background="@drawable/nexonfootballgodic"
+        android:contentDescription="@null"
+        android:layout_marginTop="180dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
-</LinearLayout>
+</RelativeLayout>
