--- a/Navigation/app/src/main/res/layout/activity_menu.xml
+++ b/Navigation/app/src/main/res/layout/activity_menu.xml
@@ -27,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="@drawable/ss"/>
+                android:background="@drawable/startest2"/>
         </LinearLayout>
         <LinearLayout
             android:layout_margin="7dp"
@@ -40,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="@drawable/gasstation"
+                android:background="@drawable/gasstationtest"
                 />
         </LinearLayout>
 
@@ -70,7 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="@drawable/bluetooth"
+                android:background="@drawable/bluetoothtest"
                 />
         </LinearLayout>
 
