--- a/Navigation/app/src/main/res/layout/activity_ready.xml
+++ b/Navigation/app/src/main/res/layout/activity_ready.xml
@@ -12,13 +12,13 @@
         android:id="@+id/addressLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        android:background="#F4F4F4"
-        android:layout_weight="2">
+        android:layout_weight="2"
+        android:background="#2f91f9"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -28,23 +28,23 @@
                 android:layout_weight="0.8"
                 android:gravity="center"
                 android:text="출발지"
-                android:textStyle="bold"
-                android:textColor="#000000"
-                android:textSize="18dp" />
+                android:textColor="#FFFFFF"
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/startPointAddress"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:textColor="#000000"
                 android:layout_weight="0.2"
-                android:textSize="15dp"/>
+                android:gravity="center_vertical"
+                android:textColor="#FFFFFF"
+                android:textSize="15dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1">
 
             <TextView
@@ -53,18 +53,18 @@
                 android:layout_weight="0.8"
                 android:gravity="center"
                 android:text="도착지"
-                android:textStyle="bold"
-                android:textColor="#000000"
-                android:textSize="18dp" />
+                android:textColor="#FFFFFF"
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/departmentAddress"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0.2"
                 android:gravity="center_vertical"
-                android:textColor="#000000"
-                android:textSize="15dp"
-                android:layout_weight="0.2" />
+                android:textColor="#FFFFFF"
+                android:textSize="15dp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -91,7 +91,7 @@
             android:layout_weight="0.7"
             android:gravity="center"
             android:text="추천길안내"
-            android:textColor="#FF8880"
+            android:textColor="#FF0000"
             android:textSize="15dp"
             android:textStyle="bold" />
         <TextView
@@ -160,9 +160,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="#E84E40"
+            android:background="#a62c23"
             android:textSize="20dp"
             android:textStyle="bold"
+            android:textColor="#FFFFFF"
             android:text="안내시작" />
 
 
