--- a/Navigation/app/src/main/res/drawable/secondinform.xml
+++ b/Navigation/app/src/main/res/drawable/secondinform.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
 
     <!-- 테두리 내부 색상 설정 -->
-    <solid android:color="#0978ea" />
+    <solid android:color="#002a4d" />
 
     <!-- 테두리 내부 여백 설정 -->
     <corners
