--- a/Navigation/app/src/main/res/layout/activity_menu.xml
+++ b/Navigation/app/src/main/res/layout/activity_menu.xml
@@ -11,11 +11,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
+        android:background="#4C4C4C"
         android:layout_alignParentTop="true"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_margin="7dp"
+            android:layout_margin="13dp"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -27,10 +28,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="@drawable/startest2"/>
+                android:background="@drawable/startest3"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_margin="7dp"
+            android:layout_margin="13dp"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -40,12 +41,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="@drawable/gasstationtest"
+                android:background="@drawable/gasstationtest3"
                 />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_margin="7dp"
+            android:layout_margin="13dp"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -59,23 +60,23 @@
                 />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_margin="7dp"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_weight="1">
-            <ImageButton
-                android:id="@+id/button4"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:background="@drawable/bluetoothtest"
-                />
-        </LinearLayout>
+        <!--<LinearLayout-->
+            <!--android:layout_margin="7dp"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="60dp"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_weight="1">-->
+            <!--<ImageButton-->
+                <!--android:id="@+id/button4"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:background="@drawable/bluetoothtest3"-->
+                <!--/>-->
+        <!--</LinearLayout>-->
 
         <LinearLayout
-            android:layout_margin="7dp"
+            android:layout_margin="13dp"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -85,7 +86,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="@drawable/notificationtest"
+                android:background="@drawable/notificationtest2"
                 />
         </LinearLayout>
 
@@ -94,8 +95,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:background="#4C4C4C"
         android:layout_toEndOf="@+id/button1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp">
 
         <TextView
             android:id="@+id/textView1"
@@ -104,7 +107,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="즐겨찾기"
-            android:textColor="#000000" />
+            android:textColor="#FFFFFF" />
 
         <TextView
             android:id="@+id/textView2"
@@ -113,7 +116,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="주변검색"
-            android:textColor="#000000" />
+            android:textColor="#FFFFFF" />
 
         <TextView
             android:id="@+id/textView3"
@@ -122,16 +125,16 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="최근목적지"
-            android:textColor="#000000" />
+            android:textColor="#FFFFFF" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="블루투스"
-            android:textColor="#000000" />
+        <!--<TextView-->
+            <!--android:id="@+id/textView4"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:gravity="center"-->
+            <!--android:text="블루투스"-->
+            <!--android:textColor="#FFFFFF" />-->
 
         <TextView
             android:id="@+id/textView5"
@@ -140,7 +143,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="공지사항"
-            android:textColor="#000000" />
+            android:textColor="#FFFFFF" />
     </LinearLayout>
 
 
@@ -188,7 +191,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:background="#E4E4E4"
+        android:background="#6C6C6C"
         android:horizontalSpacing="1dp"
         android:verticalSpacing="1dp"
         android:listSelector="@android:color/transparent"
