--- a/Navigation/app/src/main/res/layout/activity_splash.xml
+++ b/Navigation/app/src/main/res/layout/activity_splash.xml
@@ -17,11 +17,11 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:background="@drawable/handlearicon"
+        android:background="@drawable/handlearicontest3"
         android:layout_marginTop="50dp"
         android:layout_below="@+id/imageView3"
         android:layout_centerHorizontal="true"
-        android:contentDescription="@drawable/handlearicon"/>
+        android:contentDescription="@drawable/handlearicontest3"/>
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="250dp"
