--- a/Navigation/app/src/main/res/layout/custom_grid_item.xml
+++ b/Navigation/app/src/main/res/layout/custom_grid_item.xml
@@ -31,7 +31,7 @@
             android:layout_width="120dp"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="#FFFFFF"
+            android:background="#F6F6F6"
             android:gravity="center"
             android:text="즐겨찾기"
             android:textColor="#000000"
