--- a/Navigation/app/src/main/res/layout/listview_item.xml
+++ b/Navigation/app/src/main/res/layout/listview_item.xml
@@ -1,38 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/imageView1"
-        android:layout_weight="1" />
+    android:layout_height="wrap_content">
 
     <LinearLayout
-        android:orientation="vertical"
+        android:layout_width="45dp"
+        android:layout_height="60dp"
+        android:layout_weight="0.7"
+        android:layout_gravity="center"
+        android:gravity="center">
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"/>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="4">
+        android:layout_weight="5">
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="New Text"
-            android:id="@+id/textView1"
-            android:textSize="24sp"
-            android:textColor="#000000"
-            android:gravity="center_vertical"
-            android:layout_weight="2" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/textView2"
+            android:id="@+id/storeName"
             android:textSize="16sp"
-            android:textColor="#666666"
-            android:layout_weight="1" />
+            android:gravity="left|center_vertical"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_weight="0.7" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="New Text"
+            android:id="@+id/meter"
+            android:textSize="16sp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="#a62c23"
+            android:layout_weight="1.1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.1"
+            android:layout_gravity="center"
+            android:gravity="center">
+            <Button
+                android:layout_width="40dp"
+                android:layout_height="35dp"
+                android:text="등록"
+                android:id="@+id/detailButton"
+                android:background="@drawable/enrollbuttonline"
+                android:textSize="16dp"
+                android:gravity="center"
+                android:textColor="#666666"  />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
